Sua file de tao conflict

--- a/about.html
+++ b/about.html
@@ -1,2 +1,2 @@
 <h1>Cac ban nho subcribe cho anh DUng deptrai </h1>
-<p> Anh Dung ra clip vao thu ba nhe ahihi </p>
+<p> Anh Dung ra clip vao thu ba va chu nhat </p>
