Add more link JAV

--- a/java.html
+++ b/java.html
@@ -2,4 +2,8 @@
     <li>Oizawa -993</li>
     <li>Yua mikami -556</li>
     <li>Sawamura -440 </li>
+    <li>Yua mikami -556</li>
+    <li>Sawamura -440 </li>
+    <li>Yua mikami -556</li>
+    <li>Sawamura -440 </li>
 </ul>
